# pauli_tracker

./: .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  codecov.yml  notes.norg  rustfmt.toml  todo.norg  todo.txt
.github/: codecov.yml
.github/workflows/: audit.yml  check.yml  pypackage.yml  pypublish.yml  safety.yml  test.yml
c_lib/: Dockerfile  README.md  makefile  pauli_tracker.h
c_lib/builder/gen_bind/: Cargo.toml
c_lib/builder/gen_bind/src/: lib.rs
c_lib/builder/impl_api/: Cargo.toml
c_lib/diy_example/: .ccls  Cargo.toml  makefile  minimal_lib.h
c_lib/diy_example/.cargo/: config.toml
c_lib/diy_example/app/: main.cpp
c_lib/diy_example/src/: lib.rs
c_lib/example_usage/: .ccls  makefile
c_lib/example_usage/src/: main.cpp
c_lib/generate_bindings/: Cargo.toml
c_lib/generate_bindings/src/: main.rs
c_lib/pauli_tracker_clib/: Cargo.toml
c_lib/pauli_tracker_clib/.cargo/: config.toml
c_lib/pauli_tracker_clib/src/: boolean_vector.rs  collection.rs  lib.rs  pauli.rs  tracker.rs
c_lib/pauli_tracker_clib/src/pauli/: enumlike.rs  tuple.rs
c_lib/pauli_tracker_clib/src/tracker/: frames.rs  live.rs
docs/: .buildinfo  building.md  conjugation_rules.md  deprecated_conjugation_rules.md  objects.inv  searchindex.js
docs/_autosummary/: pauli_tracker.frames.map.Frames.html  pauli_tracker.frames.map.html  pauli_tracker.frames.vec.Frames.html  pauli_tracker.frames.vec.html  pauli_tracker.html  pauli_tracker.live.map.html  pauli_tracker.live.vec.Live.html  pauli_tracker.pauli.PauliDense.html  pauli_tracker.pauli.PauliTuple.html  pauli_tracker.pauli.TableauEncoding.html  pauli_tracker.pauli.html
docs/python_lib/: genindex.html  index.html  py-modindex.html  search.html
docs/python_lib/_autosummary/: pauli_tracker.frames.DependencyGraph.html  pauli_tracker.frames.html  pauli_tracker.live.html  pauli_tracker.live.map.Live.html  pauli_tracker.live.vec.html  pauli_tracker.pauli.PauliStack.html
docs/python_lib/_modules/: index.html
docs/tex/: conjugation_rules.tex  header.tex  literature.bib  nature_custom.bbx
foreign_api/c/: Cargo.toml  cbindgen.toml  header.hpp
foreign_api/c/src/: lib.rs
foreign_api/examples/: README.md
foreign_api/examples/c/: .ccls  setup.bash
foreign_api/examples/julia/: lib.jl  main.jl
foreign_api/testing/c/: makefile
foreign_api/testing/julia/: main.jl
pauli_tracker/: CHANGELOG.md  Cargo.toml  Cargo_nightly.toml  README.md  build.rs  todo.txt  xtask
pauli_tracker/.cargo/: config.toml
pauli_tracker/benches/: paler.rs
pauli_tracker/src/: boolean_vector.rs  circuit.rs  clifford_helper.rs  collection.rs  lib.rs  pauli.rs  scheduler.rs  slice_extension.rs  tracker.rs
pauli_tracker/src/boolean_vector/: bit_vec.rs  bitvec.rs  bitvec_simd.rs  std_vec.rs
pauli_tracker/src/circuit/: dummies.rs  dummy.rs  random_measurement.rs
pauli_tracker/src/collection/: buffered_vector.rs  map.rs  mapped_vector.rs  naive_vector.rs
pauli_tracker/src/pauli/: dense.rs  enumlike.rs  stack.rs  tuple.rs
pauli_tracker/src/scheduler/: combinatoric.rs  space.rs  time.rs  tree.rs
pauli_tracker/src/tracker/: frames.rs  live.rs
pauli_tracker/src/tracker/frames/: dependency_graph.rs  induced_order.rs  induced_ordering.rs  storage.rs
pauli_tracker/src/tracker/frames/storage/: mapped_vector.rs  vector.rs
pauli_tracker/tests/roundtrips/: mod.rs  scheduling.rs  tracking.rs
pauli_tracker/xdocs/: lib.md  scheduler.md
python_lib/: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  main_requirements.txt  makefile  pyproject.toml  requirements.txt  test.py
python_lib/.cargo/: config.toml
python_lib/conda/: Dockerfile  README.md  build.sh  makefile  meta.yaml
python_lib/docs/: conf.py  index.rst
python_lib/docs/_static/: readthedocs_custom.css
python_lib/docs/_templates/: custom_module_template.rst
python_lib/python/pauli_tracker/: __init__.py  pauli.py
python_lib/python/pauli_tracker/frames/: __init__.py  map.py  vec.py
python_lib/python/pauli_tracker/live/: __init__.py  map.py  vec.py
python_lib/rust/: Cargo.toml
python_lib/rust/.cargo/: config.toml
python_lib/rust/_lib/: Cargo.toml
python_lib/rust/_lib/src/: lib.rs
python_lib/rust/src/: frames.rs  impl_helper.rs  lib.rs  live.rs  pauli.rs
python_lib/rust/src/frames/: map.rs  vec.rs
python_lib/rust/src/impl_helper/: doc.rs  links.rs  serialization.rs  tracker.rs
python_lib/rust/src/live/: map.rs  vec.rs
python_lib/src/: frames.rs  impl_helper.rs  lib.rs  live.rs  pauli.rs
python_lib/src/frames/: map.rs  vec.rs
python_lib/src/live/: map.rs  vec.rs
python_lib/tests/: main.py
python_lib/utils/: Cargo.toml
python_lib/utils/src/: lib.rs  serialization.rs
src/: analyse.rs  bool_vector.rs  boolean_vector.rs  circuit.rs  collection.rs  lib.rs  pauli.rs  pauli_frame.rs  scheduler.rs  slice_extension.rs  tracker.rs
src/analyse/: combinatoric.rs  schedule.rs  space.rs
src/analyse/schedule/: space.rs  sweep.rs  time.rs  tree.rs
src/bool_vector/: bitvec.rs  bitvec_simd.rs
src/boolean_vector/: bit_vec.rs  bitvec.rs  bitvec_simd.rs
src/circuit/: dense.rs  dummy.rs  random_measurement.rs  simple.rs
src/collection/: buffered_vector.rs  hash_map.rs  map.rs  mapped_vector.rs
src/pauli/: dense.rs  enumlike.rs  single.rs  stack.rs  tuple.rs  vec.rs
src/pauli_frame/: storage.rs
src/pauli_frame/storage/: fixed_vector.rs  full_map.rs  mapped_vector.rs
src/scheduler/: combinatoric.rs  space.rs  time.rs  tree.rs
src/scheduler/space/: maybe_better.rs
src/tracker/: frames.rs  live.rs
src/tracker/frames/: dependency_graph.rs  storage.rs
tests/: live_full_compatibility.rs  roundtrip.rs  roundtripping.rs
tests/roundtrips/: mod.rs  scheduling.proptest-regressions  scheduling.rs  tracking.proptest-regressions  tracking.rs
xtask/: Cargo.toml  README.md
xtask/proc/: Cargo.toml
xtask/proc/src/: lib.rs
xtask/src/: ci_cd.rs  cicd.rs  commands.rs  lib.rs  main.rs
xtask/src/commands/: ci.rs  python_lib.rs
xtask/src/commands/ci/: jobs.rs
xtask/src/commands/python_lib/: tasks.rs
(+12 files in other folders)
