[package]
name = "pauli_tracker"
version = "0.1.1"
authors = ["Jannis Ruh <ruh.j81@gmail.com>"]

edition = "2021"
rust-version = "1.65.0" # needed for GATs

license = "MIT OR Apache-2.0"

repository = "https://github.com/taeruh/pauli_tracker"
description = "A library to track Pauli gates through a Clifford circuit."
keywords = ["quantum", "clifford", "mbqc"]
categories = ["simulation"]

[lib]
crate-type = ["lib"]

[features]
circuit = ["dep:rand"]
serde = ["dep:serde", "bit-vec/serde"]

[dependencies]
bit-vec = "0.6.3"
itertools = "0.10.5"
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.163", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
# we use cfg_attr(docsrs, <(nightly-)attribute>) to use (nightly)-attributes when
# building the docs (note that Docs.rs builds the docs with the nightly toolchain)
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
proptest = "1.2.0"
serde_yaml = "0.9.21"


[workspace]
members = [
  "./",
  "xtask",
  "xtask/proc",
]
default-members = [
  "./",
]
