[package]
name = "python_lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0" # needed for pauli_vector (1.56 for pyo3)

[lib]
name = "pauli_tracker"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["multiple-pymethods"] }
lib = { package = "pauli_tracker", version = "0.3.1", features = ["bitvec"] }
rustc-hash = "1.1.0"
bitvec = "1.0.1"
