[package]
name = "pauli_tracker_py_lib"
version = "0.1.0"
authors = ["Jannis Ruh <ruh.j81@gmail.com>"]

edition = "2021"
rust-version = "1.65.0" # needed for pauli_vector (1.56 for pyo3)

license = "MIT OR Apache-2.0"

repository = "https://github.com/taeruh/pauli_tracker"

description = "PyO3 wrapper for the pauli_tracker crate."
keywords = ["quantum", "clifford", "pauli", "mbqc"]
categories = ["simulation"]

readme = "./README.md"

exclude = ["makefile", "test.py", "xtask"]

[lib]
name = "pauli_tracker"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["multiple-pymethods", "abi3-py38"] }
# lib = { package = "pauli_tracker", version = "0.3.1", features = ["bitvec"] }
lib = { package = "pauli_tracker", version = "0.3.2-alpha.1", features = ["serde", "bitvec"], git = "https://github.com/taeruh/pauli_tracker" }
rustc-hash = "1.1.0"
bitvec = "1.0.1"
serde_json = "1.0.108"
bincode = "1.3.3"
