[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pauli_tracker"
version = "0.1.3-alpha.1"
authors = [{name="Jannis Ruh", email="ruh.j81@gmail.com"}]

description = "A library to track Pauli gates through Clifford circuits."

readme = "README.md"

requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/taeruh/pauli_tracker"
Documentation = "https://taeruh.github.io/pauli_tracker/"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pauli_tracker._lib"
manifest-path = "rust/_lib/Cargo.toml"
python-source = "python"
include = [{ path = "LICENSE*", format = "sdist" }]
