[package]
name = "xtask"
version = "0.1.0"
authors = ["Jannis Ruh <ruh.j81@gmail.com>"]
edition = "2021"
description = "Common dev tasks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
proc = { path = "proc", package = "xtask_proc" }
