[package]
name = "pauli_tracker_clib"
version = "0.1.0"

edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
impl_api = { version = "0.1.0", path = "../builder/impl_api" }
serde = "1.0.173"
serde_json = "1.0.103"
rustc-hash = "1.0.1"
bit-vec = "0.6.2"
bitvec = "1.0.1"

[dependencies.pauli_tracker]
version = "0.4.0-alpha.1"
# git = "https://github.com/taeruh/pauli_tracker" # comment when using real release
path = "../../pauli_tracker"
features = ["serde", "bitvec"]
