[package]
name = "pauli_tracker_pyo3"
version = "0.1.0"
authors = ["Jannis Ruh <ruh.j81@gmail.com>"]

edition = "2021"
rust-version = "1.65.0" # needed for pauli_vector (1.56 for pyo3)

license = "MIT OR Apache-2.0"

[lib]
name = "pauli_tracker_pyo3"
crate-type = ["lib"]

[dependencies]
lib = { package = "pauli_tracker", version = "0.4.4", features = ["serde", "bitvec"] }
# lib = { package = "pauli_tracker", version = "0.4.1-alpha.1", features = [
#   "serde",
#   "bitvec",
# ], git = "https://github.com/taeruh/pauli_tracker" }
pyo3 = { version = "0.20.2", default-features = false, features = [
  "macros",
  "multiple-pymethods",
] }
rustc-hash = "1.1.0"
bitvec = "1.0.1"
serde_json = "1.0.113"
bincode = "1.3.3"
serde = "1.0.196"
