[package]
name = "_lib"
version = "0.1.0"
authors = ["Jannis Ruh <ruh.j81@gmail.com>"]

edition = "2021"
rust-version = "1.65.0" # needed for pauli_vector (1.56 for pyo3)

license = "MIT OR Apache-2.0"

repository = "https://github.com/taeruh/pauli_tracker"

description = "PyO3 wrapper for the pauli_tracker crate."
keywords = ["quantum", "clifford", "pauli", "mbqc"]
categories = ["simulation"]

readme = "../../README.md"

[lib]
name = "_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["multiple-pymethods"] }
pauli_tracker_pyo3 = { path = "../" }

[features]
enable_abi3 = ["pyo3/abi3-py38"]
